2001-11-19  Kazuhiko  <kazuhiko@ring.gr.jp>

	* w3m-xmac.el (w3m-create-image): Fix a problem in handling XBM
	on XEmacs.

2001-11-18  TSUCHIYA Masatoshi  <tsuchiya@namazu.org>

	* w3m.el (w3m-attributes): Establish the error handler for
	`w3m-process-timeout' when the argument `handler' is equal to nil.
	(w3m-retrieve): Ditto.
	(w3m-about-header): Establish the error handler for
	`w3m-process-timeout' before `w3m-w3m-get-header' is called.
	(w3m-select-buffer-close-window): Check whether the menu's window
	exists.

	* w3m-proc.el: Changes to avoid endless loop.
	(w3m-process-start-process): Changed the spec of its return value.
	(w3m-process-timeout): New error symbol.
	(w3m-process-with-wait-handler): Bind `inhibit-quit' to nil, in
	order to accept user's quit; Signal `w3m-process-timeout' when
	time out is detected.
	(w3m-process-do): Accept null variable.
	(w3m-process-do-with-temp-buffer): Ditto.

	* Makefile.in (default): Cancel the last change.

2001-11-16  TSUCHIYA Masatoshi  <tsuchiya@namazu.org>

	* Makefile.in (default): When files which define macros and inline
	functions such as w3m-util.el and w3m-proc.el are newer than their
	byte-compiled files, run clean target before compile.

	* w3m.el (w3m-about-db-history-today): Removed.
	(w3m-about-db-history): Call `w3m-time-lapse-seconds' to classify
	entries.

	* w3m-proc.el: Changes to avoid endless loop.
	(w3m-process-inhibit-quit): New internal variable.
	(w3m-process-timeout): New variable.
	(w3m-process-with-wait-handler): Strict check when asynchrounous
	processes finish; Refer `w3m-process-timeout' to check idle time.
	(w3m-process-sentinel): Bind `inhibit-quit' according to
	`w3m-process-sentinel'.

	* w3m-e21.el: Changes to display tabs which are retieving contents
	in the other face.
	(top): Define `w3m-current-process' to avoid byte-compile warning.
	(w3m-tab-unselected-retrieving-face): New face.
	(w3m-tab-selected-retrieving-face): Ditto.