@@ -1,10 +1,8 @@
 ;;; sb-ibm-dev.el --- shimbun backend for www-6.ibm.com/ja/developerworks
+;; Copyright (C) 2001 NAKAJIMA Mikio <minakaji@osaka.email.ne.jp>
 
 ;; Author: NAKAJIMA Mikio <minakaji@osaka.email.ne.jp>
-
 ;; Keywords: news
-
-;;; Copyright:
 
 ;; This program is free software; you can redistribute it and/or modify
 ;; it under the terms of the GNU General Public License as published by
@@ -193,4 +191,5 @@
    (buffer-string) (mime-charset-to-coding-system "ISO-2022-JP")))
 
 (provide 'sb-ibm-dev)
+
 ;;; sb-ibm-dev.el ends here
