@@ -1,10 +1,8 @@
 ;;; sb-w3m-dev.el --- shimbun backend for w3m-dev
+;; Copyright (C) 2001 NAKAJIMA Mikio <minakaji@osaka.email.ne.jp>
 
 ;; Author: NAKAJIMA Mikio <minakaji@osaka.email.ne.jp>
-
 ;; Keywords: news
-
-;;; Copyright:
 
 ;; This program is free software; you can redistribute it and/or modify
 ;; it under the terms of the GNU General Public License as published by
